--- a/mysite/autoservice/templates/base.html
+++ b/mysite/autoservice/templates/base.html
@@ -33,7 +33,9 @@
             <li class="nav-item"><a class="nav-link" href="{% url 'logout'%}?next=/autoservice">Logout</a></li>
           {% else %}
             <li class="nav-item"><a class="nav-link" href="{% url 'login'%}?next={{request.path}}">Sign in</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Register</a></li>
+            {% if not user.is_authenticated %}
+              <li class="nav-item"><a class="nav-link" href="{% url 'register'%}">Register</a></li>
+            {% endif %}
           {% endif %}
         </ul>
      {% endblock %}
