--- a/mysite/autoservice/templates/order_detail.html
+++ b/mysite/autoservice/templates/order_detail.html
@@ -9,13 +9,42 @@
   <p><strong>Car model:</strong> {{ order.owner_car.car.model }}</p>
   <p><strong>Car engine:</strong> {{ order.owner_car.car.engine }}</p>
 
-  <div style="margin-left:20px;margin-top:20px">
+    <div style="margin-left:20px;margin-top:20px">
     <h4>Service:</h4>
     <hr>
     <p class="{% if order.status == 'draft' %}text-success{% elif order.status == 'in progress' %}text-danger{% else %}text-warning{% endif %}">
       {{ order.get_status_display }}
     </p>
-    <p><strong>Order:</strong>{% for copy in order.orderline_set.all %} {{ copy.service.name }}, {% endfor %}</p>
-    <p><strong>Will be completed:</strong> {{ order.due_date }}</p>
+    <p><strong>Order:</strong>
+      </br>
+      {% for copy in order.orderline_set.all %}
+        <strong>Service:</strong> {{ copy.service.name }} <strong>Quantity:</strong> {{ copy.qty }} <strong>Price:</strong> {{ copy.service.price }} <strong>Cost:</strong> {{ copy.total_cost }}<br>
+      {% endfor %}</p>
+      <strong>Total repair cost:</strong> {{ order.total_cost }}
+      <hr>
+    <strong>Will be completed:</strong> {{ order.due_date }}
   </div>
+
+  </br>
+  <h4>Comments:</h4>
+  {% if order.orderreview_set.all %}
+    {% for review in order.orderreview_set.all %}
+      <hr>
+      <strong>{{ review.reviewer }}</strong>, <em>{{ review.date_created}}</em>
+      <p>{{ review.content }}</p>
+    {% endfor %}
+  {% else %}
+    <p>This car doesn't have any comments</p>
+  {% endif %}
+    {% if user.is_authenticated %}
+  <div class="fieldWrapper">
+    <hr><br/>
+    <h4>Leave a comment:</h4>
+    <form action="" method="post">
+      {% csrf_token %}
+      {{ form.content }}</br>
+      <input type="submit" value="Save">
+    </form>
+  </div>
+  {% endif %}
 {% endblock %}
