--- a/mysite/autoservice/templates/user_cars.html
+++ b/mysite/autoservice/templates/user_cars.html
@@ -14,6 +14,6 @@
     </ul>
 
     {% else %}
-      <p>You don't have any orders.</p>
+      <p>You don't have any orders or the order is already complete, or still in draft.</p>
     {% endif %}       
 {% endblock %}
