--- a/mysite/autoservice/templates/index.html
+++ b/mysite/autoservice/templates/index.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
-
+{% load i18n %}
 {% block content %}
-  <h1>The Best Auto Service</h1>
-  <p>We currently have:</p>
+  <h1>{% trans "The Best Auto Service" %}</h1>
+  <p>{% trans "We currently have:" %}</p>
   <ul>
-    <li><strong>Cars:</strong> {{ num_cars }}</li>
-    <li><strong>Orders:</strong> {{ num_orders }}</li>
-    <li><strong>Completed orders:</strong> {{ num_orders_done }}</li>
-    <li><strong>Services:</strong> {{ num_services }}</li>
+    <li><strong>{% trans "Cars:" %}</strong> {{ num_cars }}</li>
+    <li><strong>{% trans "Orders:" %}</strong> {{ num_orders }}</li>
+    <li><strong>{% trans "Completed orders:" %}</strong> {{ num_orders_done }}</li>
+    <li><strong>{% trans "Services:" %}</strong> {{ num_services }}</li>
   </ul>
 {% if num_visits == 1 %}
-<p>This is your {{ num_visits }}-st time visiting our page, have a look around.</p>
+<p>{% trans "This is your" %} {{num_visits}} {% trans "-st time visiting our page, have a look around." %}</p>
 {% else %}
-<p>This is your {{ num_visits }} time visiting our page, welcome back!</p>
+<p>{% trans "This is your" %} {{num_visits}} {% trans "time visiting our page, welcome back!" %}</p>
 {% endif %}
 {% endblock %}
