--- a/mysite/autoservice/templates/base.html
+++ b/mysite/autoservice/templates/base.html
@@ -50,6 +50,7 @@
                     </svg>
                     {{ user.get_username }}</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'my-orders'%}">{% blocktrans %}My orders{% endblocktrans %}</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'my-order-new'%}">{% trans "New" %}</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'logout'%}?next=/autoservice">{% blocktrans %}Logout{% endblocktrans %}</a></li>
                 {% else %}
                 <li class="nav-item"><a class="nav-link" href="{% url 'login'%}?next={{request.path}}">{% blocktrans %}Sign in{% endblocktrans %}</a></li>
